Copy updates and spacing fixes.

--- a/css/app.css
+++ b/css/app.css
@@ -1,7 +1,7 @@
 
 section { 
   width: 100%;
-  padding: 0 2em;
+  padding: 2em;
   margin: 0 auto;
 }
 
@@ -122,6 +122,13 @@ ol, ul {
 .circle p {
   margin-top: 42%;
 }
+
+.convert-to-code-tagline {
+  margin-top: 3rem;
+  margin-bottom: 2rem;
+}
+
+
 /* Small only */
 @media screen and (max-width: 39.9375em) {
   .circle {
@@ -142,6 +149,11 @@ ol, ul {
 }
 
 
+@media screen and (min-width: 40em) {
+  h1 {
+      font-size: 4rem;
+  }
+}
 
 .faq-page p {
   max-width: 45rem;
